[package]
name = "tree_view"
version = "0.1.2"
authors = ["functional-tim <tim.gravert@web.de>"]
edition = "2024"
description = "A library to give out a view of a tree structure. Tree structures need to implement the trait TreeView."
readme = "README.md"
homepage = "https://github.com/the-forklift/tree_view"
repository = "https://github.com/the-forklift/tree_view"
license = "MIT OR Apache-2.0"
keywords = ["tree", "print", "fmt", "display"]
categories = ["command-line-interface"]

[dependencies]
sicht = { path = "../sicht" }

[[bin]]
name = "tree_view_test"
path = "src/main.rs"

[lib]
path = "src/tree_view.rs"
